--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
       </template>
     </div>
   </div>
+  <button id="volverArriba" class="volver-arriba" aria-label="Volver arriba">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
+      <path fill="none" d="M0 0h24v24H0z"/>
+      <path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z" transform="rotate(-90 12 12)" fill="currentColor"/>
+    </svg>
+  </button>
   <script src="main.js" type="module"></script>
 </body>
 
