añadir modal para el boton de eliminar posts

--- a/index.html
+++ b/index.html
@@ -54,6 +54,16 @@
           <p class="comment-body"></p>
         </div>
       </template>
+
+      <div id="modal-eliminar" class="modal-fondo oculto">
+        <div class="modal-contenido">
+          <h3>¿Estás seguro de que quieres eliminar esta publicación?</h3>
+          <div class="modal-botones">
+            <button id="btn-cancelar" class="btn-secundario">Cancelar</button>
+            <button id="btn-eliminar" class="btn-primario">Eliminar</button>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
   <button id="volverArriba" class="volver-arriba" aria-label="Volver arriba">
