Añadir post id oculta en cada publicacion

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
               <h3>Comentarios: <span class="comments-count"></span></h3>
               <div class="comments-container"></div>
             </div>
+            <span id="post-id" class="oculto"></span>
           </article>
         </template>
 
